[Feat] QA 시나리오 작성

--- a/RAG-Pipeline/check_dataset.ipynb
+++ b/RAG-Pipeline/check_dataset.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "6e538828",
    "metadata": {},
    "outputs": [],
@@ -1059,8 +1059,381 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "id": "018ffe75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# RAW, LABEL 저장하기\n",
+    "total_raw_json_path = os.path.join(dataset_path, \"total_raw.json\")\n",
+    "total_label_json_path = os.path.join(dataset_path, \"total_label.json\")\n",
+    "\n",
+    "raw_json = json.dumps(raw_dataset_list, indent=4, ensure_ascii=False)\n",
+    "with open(total_raw_json_path, \"w\", encoding=\"utf-8\") as f:\n",
+    "    f.write(raw_json)\n",
+    "    \n",
+    "label_json = json.dumps(label_dataset_list, indent=4, ensure_ascii=False)\n",
+    "with open(total_label_json_path, \"w\", encoding=\"utf-8\") as f:\n",
+    "    f.write(label_json)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f101e544",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "{ \n",
+    "      // Metadata 용\n",
+    "      \"register_year\": \"등록연도\",\n",
+    "      \"register_month\": \"등록월\",\n",
+    "      \"register_day\": \"등록일\",\n",
+    "      \"regitster_number\": \"등록번호\",\n",
+    "      \n",
+    "      \"application_year\": \"출원연도\",\n",
+    "      \"application_month\": \"출원월\",\n",
+    "      \"application_day\": \"출원일\",\n",
+    "      \"application_number\": \"출원번호\",\n",
+    "      \n",
+    "      \"open_year\": \"공개연도\",\n",
+    "      \"open_month\": \"공개월\",\n",
+    "      \"open_day\": \"공개일\",\n",
+    "      \"open_number\": \"공개번호\",\n",
+    "      \n",
+    "      \"ipc_section\": \"IPC-Section\",\n",
+    "      \"ipc_class\": \"IPC-Class\",\n",
+    "      \"ipc_subclass\": \"IPC-Subclass\",\n",
+    "      \"ipc_maingroup\": \"IPC-MainGroup\",\n",
+    "\n",
+    "      \"large_no\": \"대분류코드\",\n",
+    "      \"middle_no\": \"중분류코드\",\n",
+    "      \"small_no\": \"소분류코드\",\n",
+    "\n",
+    "      \"country_code\": \"국가코드\",\n",
+    "      \"document_id\": \"문헌키\",\n",
+    "      \"document_type\": \"문헌타입\",\n",
+    "\n",
+    "      // 임베딩용\n",
+    "      \"invention_title\": \"발명의명칭\",\n",
+    "      \"inventor_name\": \"발명자명\",\n",
+    "      \"applicant_name\": \"출원인명\",\n",
+    "      \"claims\": \"청구항\",\n",
+    "      \"abstract\": \"요약\",\n",
+    "      \"keyword\": \"명칭, 요약, 청구항에서 추출한 키워드 6개 및 국가전략기술 12대 분야 대분류 1개 (리스트 형태로 저장: /로 split하기)\"\n",
+    "    }\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "56a730c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_format = {\n",
+    "    \"register_year\": None,\n",
+    "    \"register_month\": None,\n",
+    "    \"register_day\": None,\n",
+    "    \"regitster_number\": None,\n",
+    "    \n",
+    "    \"application_year\": None,\n",
+    "    \"application_month\": None,\n",
+    "    \"application_day\": None,\n",
+    "    \"application_number\": None,\n",
+    "    \n",
+    "    \"open_year\": None,\n",
+    "    \"open_month\": None,\n",
+    "    \"open_day\": None,\n",
+    "    \"open_number\": None,\n",
+    "    \n",
+    "    \"ipc_all\": None,\n",
+    "    \"ipc_section\": None,\n",
+    "    \"ipc_class\": None,\n",
+    "    \"ipc_subclass\": None,\n",
+    "    \"ipc_maingroup\": None,\n",
+    "\n",
+    "    \"large_no\": None,\n",
+    "    \"middle_no\": None,\n",
+    "    \"small_no\": None,\n",
+    "\n",
+    "    \"country_code\": None,\n",
+    "    \"document_id\": None,\n",
+    "    \"document_type\": None,\n",
+    "    \n",
+    "    # embedding을 위한 키값들\n",
+    "    \"invention_title\": None,\n",
+    "    \"inventor_name\": None,\n",
+    "    \"applicant_name\": None,\n",
+    "    \"claims\": None,\n",
+    "    \"abstract\": None,\n",
+    "    \"keyword\": [],\n",
+    "\n",
+    "    # 진짜 embedding 할 내용\n",
+    "    \"invention_info\": None\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a40e460f",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "\"dataset\": {\n",
+    "        \"application_year\": \"2023\",\n",
+    "        \"invention_title\": \"인공지능에 기반한 최적 광고 추천 시스템\",\n",
+    "        \"ipc_section\": \"G\",\n",
+    "        \"register_date\": \"20230721\",\n",
+    "        \"abstract\": \"일실시예에 따르면, 인공지능에 기반한 최적 광고 추천 시스템에 있어서, 인공지능에 기반한 최적 광고를 추천하는 서버를 포함하는 시스템이 제공된다.\",\n",
+    "        \"ipc_subclass\": \"G06Q\",\n",
+    "        \"applicant_name\": \"그린브릭스컴퍼니 주식회사\",\n",
+    "        \"ipc_main\": \"G06Q-030/02\",\n",
+    "        \"register_year\": \"2023\",\n",
+    "        \"ipc_all\": \"G06Q-030/02|G06N-003/0442|G06N-003/045|G06N-003/0464|G06N-003/0475|G06N-003/08|G06N-003/094\",\n",
+    "        \"ipc_class\": \"G06\",\n",
+    "        \"claims\": \"인공지능에 기반한 최적 광고 추천 시스템에 있어서,인공지능에 기반한 광고를 추천하는 서버를 포함하고,상기 서버는,데이터 수집부;데이터 분석부; 및광고 추천부를 포함하고,상기 데이터 수집부는,소정의 검색 포털 사이트 서버를 통해, 상기 검색 포털 사이트의 소정의 광고 위치에 디스플레이된 광고 데이터인 제1 데이터를 주기적으로 수집하되, 상기 제1 데이터는 광고 콘텐츠, 디스플레이 기간, 노출수, CTR(Click Through Rate: 클릭률), CVR(ConVersion Rate: 전환율), CPA(Cost Per Action: 전환당 비용), 및 랜딩 페이지 데이터를 포함하고,상기 데이터 분석부는,상기 제1 데이터의 디스플레이 기간과 노출수 및 CPA(전환당 비용)를 입력 데이터로, 시간대별, 요일별, 월별 예상 노출수 및 시간대별 예상 CPA를 예측하도록 제1 인공지능 모델을 학습시키되, 상기 제1 인공지능 모델은 LSTM(Long Short-Term Memory) 모델 또는 Prophet 모델이고,상기 제1 인공지능 모델이 예측한, 시간대별, 요일별, 월별 예상 노출수 및 상기 시간대별 예상 CPA를 Tableau, Microsoft Power BI, Google Data Studio 중 어느 하나의 도구를 이용하여 시각화하고,CTR(클릭률)이 1% 이상인 제1 데이터의 광고 콘텐츠를 입력 데이터로, 새로운 광고 콘텐츠를 생성하도록 제2 인공지능 모델을 학습시키되, 상기 제2 인공지능 모델은 GAN(Generative Adversarial Network) 모델이고,CVR(전환율)이 5% 이상인 제1 데이터의 랜딩 페이지 데이터를 입력 데이터로, 새로운 랜딩 페이지를 생성하도록 제3 인공지능 모델을 학습시키되, 상기 제3 인공지능 모델은 GAN(Generative Adversarial Network) 모델이고,상기 제1 인공지능 모델 내지 제3 인공지능 모델은,주기적으로 수집되는 제1 데이터에 따라 주기적으로 추가 학습되고,상기 데이터 수집부는,광고주 단말을 통해 입력된, 광고 상품의 랜딩 페이지로 사용될 웹 페이지 주소를 기반으로, 상기 웹 페이지 데이터인 제2 데이터를 수집하고,상기 데이터 분석부는,이미지와 텍스트를 분석하도록 기학습된 제4 인공지능 모델에, 상기 제2 데이터를 입력하여 상기 광고 상품의 정보를 획득하되, 상기 제4 인공지능 모델은, Faster R-CNN 또는 YOLO 모델과, OCR(Optical Character Recognition) 모델, 및 BERT 모델을 포함하는 다중 모달 분석(Multi-modal Analysis) 기술을 이용하고,상기 제2 인공지능 모델에, 상기 광고 상품의 정보를 입력하여 상기 광고 상품의 정보를 기반으로 하는 새로운 광고 콘텐츠를 생성하고,상기 제3 인공지능 모델에, 상기 광고 상품의 정보를 입력하여 상기 광고 상품의 정보를 기반으로 하는 새로운 랜딩 페이지를 생성하고,상기 광고 추천부는,상기 광고주 단말에, 상기 데이터 분석부가 시각화한 시간대별, 요일별, 월별 예상 노출수 및 상기 시간대별 예상 CPA와, 상기 제2 인공지능 모델에서 생성한 상기 광고 상품의 정보를 기반으로 하는 새로운 광고 콘텐츠와, 상기 제3 인공지능 모델에서 생성한 상기 광고 상품의 정보를 기반으로 하는 새로운 랜딩 페이지를 전송하는, 시스템.\",\n",
+    "        \"application_date\": \"20230329\",\n",
+    "        \"register_number\": \"2559950\",\n",
+    "        \"documentId\": \"kr20230041575b1\",\n",
+    "        \"application_number\": \"2023-0041575\"\n",
+    "    }\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
+   "id": "02cb095b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_content = []\n",
+    "\n",
+    "for raw_dataset in raw_dataset_list:\n",
+    "    raw_data = raw_dataset[\"dataset\"]\n",
+    "    data_id = raw_data[\"documentId\"]\n",
+    "    for label_dataset in label_dataset_list:\n",
+    "        label_data = label_dataset[\"dataset\"]\n",
+    "        # 같은 문서가 아니면 건너뛰기\n",
+    "        if data_id != label_data[\"documentId\"]:\n",
+    "            continue\n",
+    "        \n",
+    "        # 같은 문서일 경우 base 형식으로 만들기\n",
+    "        base_data = base_format.copy()\n",
+    "\n",
+    "        if raw_data.get(\"register_date\", None):\n",
+    "            base_data[\"register_year\"] = raw_data[\"register_date\"][:4]\n",
+    "            base_data[\"register_month\"] = raw_data[\"register_date\"][4:6]\n",
+    "            base_data[\"register_day\"] = raw_data[\"register_date\"][6:]\n",
+    "        \n",
+    "        base_data[\"register_number\"] = raw_data.get(\"register_number\", None)\n",
+    "\n",
+    "        if raw_data.get(\"application_date\", None):\n",
+    "            base_data[\"application_year\"] = raw_data[\"application_date\"][:4]\n",
+    "            base_data[\"application_month\"] = raw_data[\"application_date\"][4:6]\n",
+    "            base_data[\"application_day\"] = raw_data[\"application_date\"][6:]\n",
+    "\n",
+    "        base_data[\"application_number\"] = raw_data.get(\"application_number\", None)\n",
+    "\n",
+    "        if raw_data.get(\"open_date\", None):\n",
+    "            base_data[\"open_year\"] = raw_data[\"open_date\"][:4]\n",
+    "            base_data[\"open_month\"] = raw_data[\"open_date\"][4:6]\n",
+    "            base_data[\"open_day\"] = raw_data[\"open_date\"][6:]\n",
+    "\n",
+    "        base_data[\"open_number\"] = raw_data.get(\"open_number\", None)\n",
+    "        \n",
+    "\n",
+    "        base_data[\"ipc_all\"] = raw_data.get(\"ipc_all\", None)\n",
+    "        if not base_data[\"ipc_all\"]:\n",
+    "            base_data[\"ipc_section\"] = raw_data.get(\"ipc_section\", None)\n",
+    "            base_data[\"ipc_class\"] = raw_data.get(\"ipc_class\", None)\n",
+    "            base_data[\"ipc_subclass\"] = raw_data.get(\"ipc_subclass\", None)\n",
+    "            base_data[\"ipc_maingroup\"] = raw_data.get(\"ipc_main\", None)\n",
+    "\n",
+    "        base_data[\"large_no\"] = label_data.get(\"Lno\", None)\n",
+    "        base_data[\"middle_no\"] = label_data.get(\"Mno\", None)\n",
+    "        base_data[\"small_no\"] = label_data.get(\"Sno\", None)\n",
+    "\n",
+    "        base_data[\"country_code\"] = label_data.get(\"country_code\", None)\n",
+    "        base_data[\"document_id\"] = raw_data.get(\"documentId\", None)\n",
+    "        base_data[\"document_type\"] = label_data.get(\"document_type\", None)\n",
+    "        \n",
+    "        base_data[\"invention_title\"] = raw_data.get(\"invention_title\", None)\n",
+    "        base_data[\"inventor_name\"] = raw_data.get(\"inventor_name\", None)\n",
+    "        base_data[\"applicant_name\"] = raw_data.get(\"applicant_name\", None)\n",
+    "        base_data[\"claims\"] = raw_data.get(\"claims\", None)\n",
+    "        base_data[\"abstract\"] = raw_data.get(\"abstract\", None)\n",
+    "        base_data[\"keyword\"] = label_data.get(\"keyword\", None).split(\"/\")\n",
+    "\n",
+    "        base_data[\"invention_info\"] = \\\n",
+    "        f'[발명의 명칭] {base_data[\"invention_title\"]}' + \"/n\" + f'[발명자명] {base_data[\"inventor_name\"]}' + '/n' + \\\n",
+    "        f'[출원인명] {base_data[\"applicant_name\"]}' + '/n' + '[청구항]' + '/n' + f'{base_data[\"claims\"]}' + '/n' + \\\n",
+    "        f'[요약] {base_data[\"abstract\"]}' + '/n' + f'[주요 키워드] {\", \".join(base_data[\"keyword\"])}'\n",
+    "\n",
+    "        base_data = json.load\n",
+    "\n",
+    "\n",
+    "    total_content.append(base_data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a95f7175",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# json 저장\n",
+    "embedding_data_path = os.path.join(dataset_path, \"for_embedding.json\")\n",
+    "total_json = json.dumps(total_content, indent=4, ensure_ascii=False)\n",
+    "with open(embedding_data_path, \"w\", encoding=\"utf-8\") as f:\n",
+    "    f.write(total_json)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f06ad42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 임베딩용으로 변환하기\n",
+    "from langchain.embeddings import SentenceTransformerEmbeddings\n",
+    "\n",
+    "model_name = \"dragonkue/BGE-m3-ko\"    # 작은 모델(0.6B)\n",
+    "model_kwargs = {\"device\": \"cpu\"}\n",
+    "encode_kwargs = {\"normalize_embeddings\": True}\n",
+    "embedding = SentenceTransformerEmbeddings(\n",
+    "    model_name=model_name,\n",
+    "    model_kwargs=model_kwargs,\n",
+    "    encode_kwargs=encode_kwargs\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "5f563e6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'register_year': None,\n",
+       " 'register_month': None,\n",
+       " 'register_day': None,\n",
+       " 'regitster_number': None,\n",
+       " 'application_year': '2002',\n",
+       " 'application_month': '03',\n",
+       " 'application_day': '25',\n",
+       " 'application_number': '2002-578212',\n",
+       " 'open_year': None,\n",
+       " 'open_month': None,\n",
+       " 'open_day': None,\n",
+       " 'open_number': None,\n",
+       " 'ipc_all': 'G06N-005/04',\n",
+       " 'ipc_section': None,\n",
+       " 'ipc_class': None,\n",
+       " 'ipc_subclass': None,\n",
+       " 'ipc_maingroup': None,\n",
+       " 'large_no': 'C',\n",
+       " 'middle_no': 'CC',\n",
+       " 'small_no': 'CCC',\n",
+       " 'country_code': 'JP',\n",
+       " 'document_id': 'jp2002578212a',\n",
+       " 'document_type': 'A',\n",
+       " 'invention_title': '인공지능 애플리케이션을 위한 음례를 선택하는 적응형 샘플링 수법',\n",
+       " 'inventor_name': None,\n",
+       " 'applicant_name': '코닌크렉카 필립스 엘렉트로닉스 N 비',\n",
+       " 'claims': '정례 및 음례를 가지는 훈련 세트한 이용을 필요로 하는 인공지능 애플리케이션을 실행하도록 구성된 처리 장치로서,데이터 및/또는 명령을 저장하도록 구성된 적어도 1개의 메모리와,상기 적어도 1개의 메모리를 이용하여, 훈련을 위한 정례 세트를 인식해 유지하는 조작, 및 상기 정례 세트에 따라 훈련을 위한 음례 세트를 선택하는 조작을 실행하도록 구성된 적어도 1개의 프로세서와,를 가지는 처리 장치.정례 및 음례를 가지는 훈련 세트한 이용을 필요로 하는, 콘텐츠를 추천하는 방법으로서,훈련을 위한 정례 세트를 인식해 유지하는 단계와,상기 정례 세트에 따라 훈련을 위한 음례 세트를 선택하는 단계와,를 가지는 방법.컴퓨터 프로그램으로서, 상기 컴퓨터 프로그램을 실행했을 때에, 프로그램 가능인 기기가 청구항 1 내지 8의 어느 한 항에 기재된 장치로서 기능하는 것을 가능하게 하는 컴퓨터 프로그램.',\n",
+       " 'abstract': '인공지능 애플리케이션은 정례 및 음례를 포함한 훈련 세트한 이용을 필요로 한다. 음례는 특징 공간에서 우위인 특징에 관해서 정례의 분포를 이용하여 선택된다. 음례는 특징 공간에서 우위인 특징의 값을 상기 정례와 공유하는 또는 대략 공유한다. 이 타입의 훈련 세트가, 콘텐트리코멘다, 특히 텔레비젼 프로그램에 대한 리코멘다에 관해서 설명된다.',\n",
+       " 'keyword': ['인공지능', '특징', '공유', '훈련', '프로그램', '로그', '인공지능'],\n",
+       " 'invention_info': '[발명의 명칭] 인공지능 애플리케이션을 위한 음례를 선택하는 적응형 샘플링 수법/n[발명자명] None/n[출원인명] 코닌크렉카 필립스 엘렉트로닉스 N 비/n[청구항]/n정례 및 음례를 가지는 훈련 세트한 이용을 필요로 하는 인공지능 애플리케이션을 실행하도록 구성된 처리 장치로서,데이터 및/또는 명령을 저장하도록 구성된 적어도 1개의 메모리와,상기 적어도 1개의 메모리를 이용하여, 훈련을 위한 정례 세트를 인식해 유지하는 조작, 및 상기 정례 세트에 따라 훈련을 위한 음례 세트를 선택하는 조작을 실행하도록 구성된 적어도 1개의 프로세서와,를 가지는 처리 장치.정례 및 음례를 가지는 훈련 세트한 이용을 필요로 하는, 콘텐츠를 추천하는 방법으로서,훈련을 위한 정례 세트를 인식해 유지하는 단계와,상기 정례 세트에 따라 훈련을 위한 음례 세트를 선택하는 단계와,를 가지는 방법.컴퓨터 프로그램으로서, 상기 컴퓨터 프로그램을 실행했을 때에, 프로그램 가능인 기기가 청구항 1 내지 8의 어느 한 항에 기재된 장치로서 기능하는 것을 가능하게 하는 컴퓨터 프로그램./n[요약] 인공지능 애플리케이션은 정례 및 음례를 포함한 훈련 세트한 이용을 필요로 한다. 음례는 특징 공간에서 우위인 특징에 관해서 정례의 분포를 이용하여 선택된다. 음례는 특징 공간에서 우위인 특징의 값을 상기 정례와 공유하는 또는 대략 공유한다. 이 타입의 훈련 세트가, 콘텐트리코멘다, 특히 텔레비젼 프로그램에 대한 리코멘다에 관해서 설명된다./n[주요 키워드] 인공지능, 특징, 공유, 훈련, 프로그램, 로그, 인공지능',\n",
+       " 'register_number': None}"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_content[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "id": "ad46dfc9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "전체 Docs 개수: 22103\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 임베딩용 키-값 Document에 저장하기\n",
+    "\n",
+    "from langchain_core.documents import Document\n",
+    "\n",
+    "documents = []\n",
+    "\n",
+    "for content in total_content:\n",
+    "    document = Document(\n",
+    "        page_content=content[\"invention_info\"],\n",
+    "        metadata={\n",
+    "            \"document_id\": content[\"document_id\"],\n",
+    "            \"document_type\": content[\"document_id\"],\n",
+    "            \"country_code\": content[\"country_code\"],\n",
+    "            \"large_code\": content[\"large_no\"],\n",
+    "            \"middle_code\": content[\"middle_no\"],\n",
+    "            \"small_code\": content[\"small_no\"],\n",
+    "            # 출원 관련\n",
+    "            \"application_number\": content[\"application_number\"],\n",
+    "            \"application_year\": content[\"application_year\"],\n",
+    "            \"application_month\": content[\"application_month\"],\n",
+    "            \"application_day\": content[\"application_day\"],\n",
+    "            # 등록 관련\n",
+    "            \"regitster_number\": content[\"regitster_number\"],\n",
+    "            \"register_year\": content[\"register_year\"],\n",
+    "            \"register_month\": content[\"register_month\"],\n",
+    "            \"register_day\": content[\"register_day\"],\n",
+    "            # 공개 관련\n",
+    "            \"open_number\": content[\"open_number\"],\n",
+    "            \"open_year\": content[\"open_year\"],\n",
+    "            \"open_month\": content[\"open_month\"],\n",
+    "            \"open_day\": content[\"open_day\"],\n",
+    "            # ipc 관련\n",
+    "            \"ipc_all\": content[\"ipc_all\"],\n",
+    "            \"ipc_section\": content[\"ipc_section\"],\n",
+    "            \"ipc_class\": content[\"ipc_class\"],\n",
+    "            \"ipc_subclass\": content[\"ipc_subclass\"],\n",
+    "            \"ipc_maingroup\": content[\"ipc_maingroup\"] \n",
+    "        }\n",
+    "    )\n",
+    "\n",
+    "    documents.append(document)\n",
+    "\n",
+    "print(\"전체 Docs 개수:\", len(documents))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "840c14cd",
+   "metadata": {},
+   "source": [
+    "- pg vector는 postgre를 사용한다고 해서 sql로 데이터 넣어주기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c95b6bd6",
    "metadata": {},
    "outputs": [],
    "source": []
